# SwordsAndDeath

./: .gitignore  Cargo.toml  LICENSE  README.md  snd.sqlite
config/: config.toml
snd_client_rs/: Cargo.toml
snd_client_rs/src/: main.rs  ui.rs
snd_network_lib/: Cargo.toml
snd_network_lib/src/: client_event.rs  encounter_data.rs  enemy_data.rs  entry_point_io.rs  entry_response.rs  lib.rs  login_data.rs  loot_data.rs  packet.capnp  packet_capnp.rs  player_data.rs  server_event.rs
snd_server/: Cargo.toml
snd_server/src/: client.rs  config.rs  database.rs  item.rs  main.rs  network.rs  packet_capnp.rs  player.rs
snd_server/src/network/: client_event.rs  encounter_data.rs  entry_point_io.rs  error_data.rs  item_data.rs  loot_data.rs  server_event.rs
