[package]
name = "snd_client_rs"
version = "0.1.0"
edition = "2021"
authors = ["eric Sk3pz <skepz.dev@gmail.com>"]
description = "The official SnD client written in rust"
repository = "https://github.com/Sk3pz/SwordsAndDeath"
license = "MIT"

[dependencies]
snd_network_lib = { path="../snd_network_lib" }
regex = "1.5.4"
better_term = "1.3.2"
rpassword = "5.0.1"
tui = "0.17.0"
crossterm = "0.23.0"