[package]
name = "snd_server"
version = "0.1.0"
edition = "2021"
authors = ["eric Sk3pz <skepz.dev@gmail.com>"]
description = "A tiny MMO RPG game server written in rust with several different clients"
repository = "https://github.com/Sk3pz/SwordsAndDeath"
license = "MIT"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
chrono = "0.4.19"
toml = "0.5.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "*", features = ["derive"] }
better_term = "1.0.4"
sqlite = "*"
snd_network_lib = { path="../snd_network_lib" }